--- a/damul-server/src/main/resources/application.properties
+++ b/damul-server/src/main/resources/application.properties
@@ -1,1 +1,16 @@
 spring.application.name=damul-server
+
+#registration
+#registration
+spring.security.oauth2.client.registration.google.client-name=GOOGLE
+spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID}
+spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_SECRET}
+spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:8080/login/oauth2/code/google
+spring.security.oauth2.client.registration.google.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.google.scope=profile,email
+
+#provider
+spring.security.oauth2.client.provider.????.authorization-uri=??? ??? ? ??
+spring.security.oauth2.client.provider.????.token-uri=?? ?? ?? ??
+spring.security.oauth2.client.provider.????.user-info-uri=??? ?? ?? ??
+spring.security.oauth2.client.provider.????.user-name-attribute=?? ??? ??
