--- a/damul-server/Dockerfile
+++ b/damul-server/Dockerfile
@@ -1,8 +1,19 @@
 # Build stage
-FROM gradle:7.6.1-jdk17 AS build
+FROM gradle:8.5-jdk17 AS build
 WORKDIR /app
-COPY . .
-RUN gradle build -x test --parallel
+
+# Gradle 의존성 먼저 복사 및 다운로드
+COPY build.gradle settings.gradle ./
+COPY gradle ./gradle
+COPY gradlew ./
+RUN chmod +x ./gradlew
+
+# 의존성 다운로드
+RUN ./gradlew dependencies
+
+# 소스 복사 및 빌드
+COPY src ./src
+RUN ./gradlew clean build -x test --no-daemon
 
 # Run stage
 FROM openjdk:17-slim
