--- a/damul-server/build.gradle
+++ b/damul-server/build.gradle
@@ -41,8 +41,11 @@ dependencies {
 
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
+	implementation 'me.paulschwarz:spring-dotenv:3.0.0'
+
 //	developmentOnly 'org.springframework.boot:spring-boot-docker-compose'
 //	runtimeOnly 'com.mysql:mysql-connector-j'
+	runtimeOnly 'com.h2database:h2'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
@@ -50,5 +53,6 @@ dependencies {
 }
 
 tasks.named('test') {
+	enabled = false
 	useJUnitPlatform()
 }
