--- a/damul-server/src/main/resources/application.yml
+++ b/damul-server/src/main/resources/application.yml
@@ -18,18 +18,60 @@ spring:
             scope:
               - profile
               - email
+
+          naver:
+            client-name: NAVER
+            client-id: ${NAVER_CLIENT_ID}
+            client-secret: ${NAVER_CLIENT_SECRET}
+            redirect-uri: ${NAVER_REDIRECT_URL}
+            authorization-grant-type: authorization_code
+            scope:
+              - nickname
+              - email
+              - profile_image
+
+          kakao:
+            client-name: KAKAO
+            client-id: ${KAKAO_CLIENT_ID}
+            client-secret: ${KAKAO_CLIENT_SECRET}
+            scope:
+              - profile_nickname
+              - account_email
+              - progile_image
+            authorization-grant-type: authorization_code
+            redirect-uri: ${KAKAO_REDIRECT_URL}
+            client-authentication-method: POST
+
         provider:
-          ????: # provider 이름
-            authorization-uri: ??? ??? ? ??
-            token-uri: ?? ?? ?? ??
-            user-info-uri: ??? ?? ?? ??
-            user-name-attribute: ?? ??? ??
+          google:
+            authorization-uri: https://accounts.google.com/o/oauth2/v2/auth
+            token-uri: https://www.googleapis.com/oauth2/v4/token
+            user-info-uri: https://www.googleapis.com/oauth2/v3/userinfo
+            user-name-attribute: sub
+
+          naver:
+            authorization-uri: https://nid.naver.com/oauth2.0/authorize
+            token-uri: https://nid.naver.com/oauth2.0/token
+            user-info-uri: https://openapi.naver.com/v1/nid/me
+            user-name-attribute: response
+
+          kakao:
+            authorization-uri: https://kauth.kakao.com/oauth/authorize
+            token-uri: https://kauth.kakao.com/oauth/token
+            user-info-uri: https://kapi.kakao.com/v2/user/me
+            user-name-attribute: response
 
   datasource:
     driver-class-name: ${MYSQL_DRIVER}
     url: ${MYSQL_URL}
     username: ${MYSQL_USER}
     password: ${MYSQL_PASSWORD}
+    hikari:
+      maximum-pool-size: 10
+      minimum-idle: 10
+      idle-timeout: 300000
+      connection-timeout: 30000
+      max-lifetime: 1200000
 
   jpa:
     hibernate:
@@ -80,4 +122,3 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.H2Dialect
-
