--- a/damul-server/build.gradle
+++ b/damul-server/build.gradle
@@ -44,7 +44,7 @@ dependencies {
 	implementation 'me.paulschwarz:spring-dotenv:3.0.0'
 
 //	developmentOnly 'org.springframework.boot:spring-boot-docker-compose'
-//	runtimeOnly 'com.mysql:mysql-connector-j'
+	runtimeOnly 'com.mysql:mysql-connector-j'
 	runtimeOnly 'com.h2database:h2'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
