--- a/damul-server/src/main/resources/application.yml
+++ b/damul-server/src/main/resources/application.yml
@@ -37,7 +37,7 @@ spring:
             scope:
               - profile_nickname
               - account_email
-              - progile_image
+              - profile_image
             authorization-grant-type: authorization_code
             redirect-uri: ${KAKAO_REDIRECT_URL}
             client-authentication-method: POST
