--- a/damul-client/package.json
+++ b/damul-client/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.5",
+    "@radix-ui/react-select": "^2.1.5",
     "@radix-ui/react-slot": "^1.1.1",
+    "@tailwindcss/line-clamp": "^0.4.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.473.0",
