--- a/damul-ocr/requirements.txt
+++ b/damul-ocr/requirements.txt
@@ -48,6 +48,7 @@ pydantic_core==2.27.2
 pyparsing==3.2.1
 python-dateutil==2.9.0.post0
 python-docx==1.1.2
+python-dotenv==1.0.1
 PyYAML==6.0.2
 RapidFuzz==3.11.0
 requests==2.32.3
