Setting: Add WebSocketConfig and WebSocketSecurityConfig[한재서]

--- a/damul-server/build.gradle
+++ b/damul-server/build.gradle
@@ -30,6 +30,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-websocket'
+	implementation 'org.springframework.security:spring-security-messaging'
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 
 	// JWT 관련 의존성
@@ -42,6 +43,7 @@ dependencies {
 	implementation 'com.amazonaws:aws-java-sdk-s3:1.12.780'
 
 	compileOnly 'org.projectlombok:lombok'
+	annotationProcessor 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	implementation 'me.paulschwarz:spring-dotenv:3.0.0'
 
