--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,8 +1,3 @@
-variables:
-  DOCKER_TLS_CERTDIR: ""
-  CLIENT_DOCKER_IMAGE: $CI_REGISTRY_IMAGE/client:latest
-  SERVER_DOCKER_IMAGE: $CI_REGISTRY_IMAGE/server:latest
-
 stages:
   - build
   - test
@@ -101,6 +96,14 @@ deploy:
 
       # Server 브랜치 배포: 서버 컨테이너만 배포
       if [[ "$CI_COMMIT_BRANCH" == "Server" ]]; then
+        ssh $EC2_USER@$EC2_HOST "
+          cd /home/ubuntu/S12P11A306 &&
+          docker pull $CI_REGISTRY_IMAGE/server:latest &&
+          docker-compose -f docker-compose.prod.yml up -d server"
+      fi
+
+      # master 브랜치 배포: 클라이언트와 서버 컨테이너 모두 배포
+      if [[ "$CI_COMMIT_BRANCH" == "master" ]]; then
         ssh $EC2_USER@$EC2_HOST "
           cd /home/ubuntu/S12P11A306 &&
           docker pull $CI_REGISTRY_IMAGE/server:latest &&
