--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -79,7 +79,7 @@ deploy:
   stage: deploy
   image: alpine:latest
   before_script:
-    - apk add --no-cache openssh openssh-keygen
+    - apk add --no-cache openssh openssh-keygen openssl
     - mkdir -p ~/.ssh
     - echo "$SSH_PRIVATE_KEY" | base64 -d | tr -d '\r' > ~/.ssh/id_rsa  # 개행 문자 제거
     - chmod 600 ~/.ssh/id_rsa
