--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -81,10 +81,10 @@ deploy:
   before_script:
     - apk add --no-cache openssh openssh-keygen openssl
     - mkdir -p ~/.ssh
-    - echo "$SSH_PRIVATE_KEY" | base64 -d | tr -d '\r' > ~/.ssh/id_rsa  # 개행 문자 제거
+    - echo "$SSH_PRIVATE_KEY" | base64 -d > ~/.ssh/id_rsa
     - chmod 600 ~/.ssh/id_rsa
-    - eval $(ssh-agent -s)  # ssh-agent 시작
-    - ssh-add ~/.ssh/id_rsa
+    - eval $(ssh-agent -s)
+    - ssh-add -v ~/.ssh/id_rsa
     - ssh-keyscan -H $EC2_HOST >> ~/.ssh/known_hosts
   script:
     - |
