--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -79,12 +79,16 @@ deploy:
   stage: deploy
   image: alpine:latest
   before_script:
-    - apk update && apk add openssh-client
+    - apk update && apk add openssh-client openssl
     - mkdir -p ~/.ssh
     - echo "$SSH_PRIVATE_KEY" | base64 -d > ~/.ssh/I12A306T.pem
     - chmod 600 ~/.ssh/I12A306T.pem
+    # 키 변환 추가
+    - ssh-keygen -p -N "" -m PEM -f ~/.ssh/I12A306T.pem
     - eval $(ssh-agent -s)
     - ssh-add ~/.ssh/I12A306T.pem
+    # SSH 호스트 체크 비활성화
+    - echo -e "Host *\n\tStrictHostKeyChecking no\n\n" > ~/.ssh/config
   script:
     - |
       # Client 브랜치 배포: 클라이언트 컨테이너만 배포
