--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -95,7 +95,7 @@ deploy:
         ssh $EC2_USER@$EC2_HOST "
           cd /home/ubuntu/S12P11A306 &&
           docker pull $CI_REGISTRY_IMAGE/client:latest &&
-          docker-compose -f docker-compose.prod.yml up -d server"
+          docker compose -f docker-compose.prod.yml up -d server"
       fi
 
       # Server 브랜치 배포: 서버 컨테이너만 배포
@@ -103,7 +103,7 @@ deploy:
         ssh $EC2_USER@$EC2_HOST "
           cd /home/ubuntu/S12P11A306 &&
           docker pull $CI_REGISTRY_IMAGE/server:latest &&
-          docker-compose -f docker-compose.prod.yml up -d server"
+          docker compose -f docker-compose.prod.yml up -d server"
       fi
 
       # master 브랜치 배포: 클라이언트와 서버 컨테이너 모두 배포
@@ -111,7 +111,7 @@ deploy:
         ssh $EC2_USER@$EC2_HOST "
           cd /home/ubuntu/S12P11A306 &&
           docker pull $CI_REGISTRY_IMAGE/server:latest &&
-          docker-compose -f docker-compose.prod.yml up -d server"
+          docker compose -f docker-compose.prod.yml up -d server"
       fi
 
       # master 브랜치 배포: 클라이언트와 서버 컨테이너 모두 배포
@@ -120,7 +120,7 @@ deploy:
           cd /home/ubuntu/S12P11A306 &&
           docker pull $CI_REGISTRY_IMAGE/client:latest &&
           docker pull $CI_REGISTRY_IMAGE/server:latest &&
-          docker-compose -f docker-compose.prod.yml up -d server"
+          docker compose -f docker-compose.prod.yml up -d server"
       fi
   rules:
     - if: '$CI_COMMIT_BRANCH =~ /^Client|Server|master$/'
