--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -50,7 +50,7 @@ client-test:
     - npm ci
     - npm run test
   rules:
-    - if: '$CI_MERGE_REQUEST_TARGET_BRANCH_NAME =~ /^Client|client-develop|master$/ && $CI_PIPELINE_SOURCE == "merge_request_event"'
+    - if: '$CI_MERGE_REQUEST_TARGET_BRANCH_NAME =~ /^(Client|client-develop|master)$/ && $CI_PIPELINE_SOURCE == "merge_request_event"'
       when: always
     - if: '$CI_COMMIT_BRANCH =~ /^Client|client-develop|master$/'
       changes:
@@ -66,7 +66,7 @@ server-test:
     - cd damul-server
     - gradle clean test
   rules:
-    - if: '$CI_MERGE_REQUEST_TARGET_BRANCH_NAME =~ /^Server|server-develop|master$/ && $CI_PIPELINE_SOURCE == "merge_request_event"'
+    - if: '$CI_MERGE_REQUEST_TARGET_BRANCH_NAME =~ /^(Server|server-develop|master)$/ && $CI_PIPELINE_SOURCE == "merge_request_event"'
       when: always
     - if: '$CI_COMMIT_BRANCH =~ /^Server|server-develop|master$/'
       changes:
