--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,8 +1,3 @@
-variables:
-  DOCKER_TLS_CERTDIR: ""
-  CLIENT_DOCKER_IMAGE: $CI_REGISTRY_IMAGE/client:latest
-  SERVER_DOCKER_IMAGE: $CI_REGISTRY_IMAGE/server:latest
-
 stages:
   - build
   - test
@@ -22,7 +17,7 @@ client-build:
     - docker build -t $CLIENT_DOCKER_IMAGE ./damul-client
     - docker push $CLIENT_DOCKER_IMAGE
   rules:
-    - if: '$CI_COMMIT_BRANCH =~ /^Client|client-develop|master$/'
+    - if: '$CI_COMMIT_BRANCH =~ /^(Client|client-develop|master$/'
       changes:
         - "damul-client/**/*"
 
@@ -40,7 +35,7 @@ server-build:
     - docker build -t $SERVER_DOCKER_IMAGE ./damul-server
     - docker push $SERVER_DOCKER_IMAGE
   rules:
-    - if: '$CI_COMMIT_BRANCH =~ /^Server|server-develop|master$/'
+    - if: '$CI_COMMIT_BRANCH =~ /^(Server|server-develop|master)$/'
       changes:
         - "damul-server/**/*"
 
@@ -84,19 +79,23 @@ deploy:
   stage: deploy
   image: alpine:latest
   before_script:
-    - apk add --no-cache openssh
+    - apk update && apk add openssh-client docker-compose
     - mkdir -p ~/.ssh
-    - echo "$SSH_PRIVATE_KEY" | base64 -d > ~/.ssh/id_rsa
-    - chmod 600 ~/.ssh/id_rsa
-    - ssh-keyscan -H $EC2_HOST >> ~/.ssh/known_hosts
+    - echo "$SSH_PRIVATE_KEY" | base64 -d > ~/.ssh/I12A306T.pem
+    - chmod 600 ~/.ssh/I12A306T.pem
+    - eval $(ssh-agent -s)
+    - ssh-add ~/.ssh/I12A306T.pem
+    - ssh-keyscan $EC2_HOST >> ~/.ssh/known_hosts
+    - chmod 644 ~/.ssh/known_hosts
+    - ssh -i ~/.ssh/I12A306T.pem ubuntu@$EC2_HOST 'cd ~/S12P11A306 && pwd'
   script:
     - |
       # Client 브랜치 배포: 클라이언트 컨테이너만 배포
       if [[ "$CI_COMMIT_BRANCH" == "Client" ]]; then
-      ssh $EC2_USER@$EC2_HOST "
+        ssh $EC2_USER@$EC2_HOST "
           cd /home/ubuntu/S12P11A306 &&
           docker pull $CI_REGISTRY_IMAGE/client:latest &&
-          docker-compose -f docker-compose.prod.yml up -d server"
+          docker compose -f docker-compose.prod.yml up -d server"
       fi
 
       # Server 브랜치 배포: 서버 컨테이너만 배포
@@ -104,7 +103,15 @@ deploy:
         ssh $EC2_USER@$EC2_HOST "
           cd /home/ubuntu/S12P11A306 &&
           docker pull $CI_REGISTRY_IMAGE/server:latest &&
-          docker-compose -f docker-compose.prod.yml up -d server"
+          docker compose -f docker-compose.prod.yml up -d server"
+      fi
+
+      # master 브랜치 배포: 클라이언트와 서버 컨테이너 모두 배포
+      if [[ "$CI_COMMIT_BRANCH" == "master" ]]; then
+        ssh $EC2_USER@$EC2_HOST "
+          cd /home/ubuntu/S12P11A306 &&
+          docker pull $CI_REGISTRY_IMAGE/server:latest &&
+          docker compose -f docker-compose.prod.yml up -d server"
       fi
 
       # master 브랜치 배포: 클라이언트와 서버 컨테이너 모두 배포
@@ -113,7 +120,7 @@ deploy:
           cd /home/ubuntu/S12P11A306 &&
           docker pull $CI_REGISTRY_IMAGE/client:latest &&
           docker pull $CI_REGISTRY_IMAGE/server:latest &&
-          docker-compose -f docker-compose.prod.yml up -d server"
+          docker compose -f docker-compose.prod.yml up -d server"
       fi
   rules:
     - if: '$CI_COMMIT_BRANCH =~ /^Client|Server|master$/'
