--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -50,9 +50,9 @@ client-test:
     - npm ci
     - npm run test
   rules:
-    - if: '$CI_MERGE_REQUEST_TARGET_BRANCH_NAME =~ /^Client|client-develop|master$/ && $CI_PIPELINE_SOURCE == "merge_request_event"'
+    - if: '$CI_PIPELINE_SOURCE == "merge_request_event"'
       when: always
-    - if: '$CI_COMMIT_BRANCH =~ /^Client|client-develop|master$/'
+    - if: '$CI_COMMIT_BRANCH =~ /^(Client|client-develop|master)$/'
       changes:
         - "damul-client/**/*"
 
@@ -66,9 +66,9 @@ server-test:
     - cd damul-server
     - gradle clean test
   rules:
-    - if: '$CI_MERGE_REQUEST_TARGET_BRANCH_NAME =~ /^Server|server-develop|master$/ && $CI_PIPELINE_SOURCE == "merge_request_event"'
+    - if: '$CI_PIPELINE_SOURCE == "merge_request_event"'
       when: always
-    - if: '$CI_COMMIT_BRANCH =~ /^Server|server-develop|master$/'
+    - if: '$CI_COMMIT_BRANCH =~ /^(Server|server-develop|master)$/'
       changes:
         - "damul-server/**/*"
 
