--- a/damul-server/build.gradle
+++ b/damul-server/build.gradle
@@ -51,7 +51,7 @@ dependencies {
 	implementation 'me.paulschwarz:spring-dotenv:3.0.0'
 
 //	developmentOnly 'org.springframework.boot:spring-boot-docker-compose'
-	runtimeOnly 'com.mysql:mysql-connector-j'
+	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
 	runtimeOnly 'com.h2database:h2'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
