--- a/damul-ocr/requirements.txt
+++ b/damul-ocr/requirements.txt
@@ -45,6 +45,7 @@ pillow==11.1.0
 protobuf==3.20.2
 pyclipper==1.3.0.post6
 pydantic==2.10.6
+pydantic-settings==2.7.1
 pydantic_core==2.27.2
 pyparsing==3.2.1
 python-dateutil==2.9.0.post0
