Fix : Resolve ObjectPostProcessor bean conflict in WebSocket configuration [지유림] - Add allow-bean-definition-overriding=true to enable bean overriding - Configure ObjectPostProcessor bean with @Primary annotation

--- a/damul-server/src/main/resources/application.yml
+++ b/damul-server/src/main/resources/application.yml
@@ -10,6 +10,9 @@ spring:
       host: ${REDIS_HOST:localhost}
       port: ${REDIS_PORT:6379}
 
+  main:
+    allow-bean-definition-overriding: true
+
   security:
     admin:
       password: ${admin.password}
