--- a/damul-server/src/main/resources/application.yml
+++ b/damul-server/src/main/resources/application.yml
@@ -44,13 +44,13 @@ spring:
             client-name: KAKAO
             client-id: ${KAKAO_CLIENT_ID}
             client-secret: ${KAKAO_CLIENT_SECRET}
+            redirect-uri: ${KAKAO_REDIRECT_URL}
+            client-authentication-method: client_secret_post
+            authorization-grant-type: authorization_code
             scope:
               - profile_nickname
               - account_email
               - profile_image
-            authorization-grant-type: authorization_code
-            redirect-uri: ${KAKAO_REDIRECT_URL}
-            client-authentication-method: POST
 
         provider:
           google:
@@ -69,7 +69,7 @@ spring:
             authorization-uri: https://kauth.kakao.com/oauth/authorize
             token-uri: https://kauth.kakao.com/oauth/token
             user-info-uri: https://kapi.kakao.com/v2/user/me
-            user-name-attribute: response
+            user-name-attribute: id
 
   datasource:
     driver-class-name: ${SPRING_DATASOURCE_DRIVER_CLASS_NAME}
