Feat : Add S3 Service and S3Config [지유림]

--- a/damul-server/src/main/resources/application.yml
+++ b/damul-server/src/main/resources/application.yml
@@ -18,6 +18,18 @@ spring:
   main:
     allow-bean-definition-overriding: true
 
+  cloud:
+    aws:
+      credentials:
+        access-key: ${AWS_ACCESS_KEY}
+        secret-key: ${AWS_SECRET_ACCESS_KEY}
+        s3:
+          bucket: ${AWS_S3_BUCKET}
+        region:
+          static: ap-northeast-2
+        stack:
+          auto: false
+
   security:
     admin:
       password: ${admin.password}
