--- a/damul-server/build.gradle
+++ b/damul-server/build.gradle
@@ -44,7 +44,8 @@ dependencies {
 
 
 	// AWS S3
-	implementation 'com.amazonaws:aws-java-sdk-s3:1.12.780'
+	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
+	implementation 'com.amazonaws:aws-java-sdk-s3:1.12.261'
 
 	// PasswordEncoder
 	implementation 'org.springframework.boot:spring-boot-starter-security'
