--- a/damul-server/build.gradle
+++ b/damul-server/build.gradle
@@ -61,10 +61,11 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
+	testImplementation 'com.h2database:h2'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
 tasks.named('test') {
-	enabled = false
+	enabled = true
 	useJUnitPlatform()
 }
