Feat : Add file-upload function [지유림]

--- a/damul-server/src/test/resources/application-test.yml
+++ b/damul-server/src/test/resources/application-test.yml
@@ -9,14 +9,19 @@ spring:
     password: ${SPRING_DATASOURCE_PASSWORD}
     driver-class-name: ${SPRING_DATASOURCE_DRIVER_CLASS_NAME}
 
-  jpa:
-    hibernate:
-      ddl-auto: validate
-    show-sql: true
+  jspring:
+    jpa:
+      hibernate:
+        ddl-auto: create  # validate에서 create로 변경
+      properties:
+        hibernate:
+          dialect: org.hibernate.dialect.MySQL8Dialect
 
   jwt:
-    secret: ${JWT_SECRET}  # 실제 운영 환경의 시크릿 키 사용
-    access-token-expiration: 3600000  # 1시간 (밀리초)
+    secret: ${JWT_SECRET}
+    access-token-expiration: ${JWT_ACCESS_VALIDITY}
+    refresh-token-expiration: ${JWT_REFRESH_VALIDITY}
+    temporary-token-expiration: ${JWT_TEMPORARY_VALIDITY}
 
 logging:
   level:
