--- a/damul-client/Dockerfile
+++ b/damul-client/Dockerfile
@@ -2,9 +2,12 @@
 FROM node:22.12.0 AS build
 WORKDIR /app
 
-# 의존성 파일 복사 및 설치
+# 의존성 파일 복사 및 캐시 방지
 COPY package*.json ./
-RUN npm install
+RUN npm cache clean --force && rm -rf node_modules package-lock.json && npm install
+
+# Rollup 네이티브 모듈 강제 설치
+RUN npm install @rollup/rollup-linux-x64-gnu
 
 # 소스 코드 복사 및 빌드
 COPY . .
@@ -25,4 +28,3 @@ EXPOSE 80
 
 # nginx 실행
 CMD ["nginx", "-g", "daemon off;"]
-
