--- a/damul-ocr/Dockerfile
+++ b/damul-ocr/Dockerfile
@@ -9,4 +9,4 @@ COPY ./requirements.txt /app/
 RUN pip install -r requirements.txt
 
 # 실행 명령
-CMD uvicorn --host=0.0.0.0 --port 8000 app.main:app
+CMD uvicorn --host=0.0.0.0 --port 8000 main:app
