--- a/damul-ocr/Dockerfile
+++ b/damul-ocr/Dockerfile
@@ -2,6 +2,9 @@
 FROM python:3.9-slim AS build
 WORKDIR /app
 
+# 기본 패키지 설치
+RUN apt update && apt install -y libgomp1
+
 # 의존성 파일 복사 및 설치
 COPY . /app/
 
