--- a/damul-client/nginx.conf
+++ b/damul-client/nginx.conf
@@ -1,6 +1,15 @@
 server {
     listen 80;
-    server_name localhost;
+    server_name i12a306.p.ssafy.io;
+    return 301 https://$server_name$request_uri;
+}
+
+server {
+    listen 443 ssl;
+    server_name i12a306.p.ssafy.io;
+
+    ssl_certificate /etc/letsencrypt/live/i12a306.p.ssafy.io/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/i12a306.p.ssafy.io/privkey.pem;
 
     # React 앱을 위한 프론트엔드 설정
     location / {
