--- a/damul-client/nginx.conf
+++ b/damul-client/nginx.conf
@@ -11,16 +11,20 @@ server {
     ssl_certificate /etc/letsencrypt/live/i12a306.p.ssafy.io/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/i12a306.p.ssafy.io/privkey.pem;
 
-    # React 앱을 위한 프론트엔드 설정
+    # React 개발 서버 프록시 (3000 포트)
     location / {
-        root /usr/share/nginx/html;    # React 빌드 파일 위치
-        index index.html;
-        try_files $uri $uri/ /index.html;  # React Router를 위한 설정
+        proxy_pass http://damul-react:3000;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         
-        # React 앱의 캐시 설정
-        add_header Cache-Control "no-cache, no-store, must-revalidate";
-        add_header Pragma "no-cache";
-        add_header Expires 0;
+        # WebSocket 지원을 위한 설정
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
     }
 
     # FastAPI 서버 프록시 (8000 포트)
