--- a/damul-client/nginx.conf
+++ b/damul-client/nginx.conf
@@ -1,53 +1,9 @@
 server {
     listen 80;
-    server_name i12a306.p.ssafy.io;
-    return 301 https://$server_name$request_uri;
-}
-
-server {
-    listen 443 ssl;
-    server_name i12a306.p.ssafy.io;
-
-    ssl_certificate /etc/letsencrypt/live/i12a306.p.ssafy.io/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/i12a306.p.ssafy.io/privkey.pem;
-
-    # React 개발 서버 프록시 (3000 포트)
+    
     location / {
-        proxy_pass http://damul-react:3000;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
-        proxy_set_header Host $host;
-        proxy_cache_bypass $http_upgrade;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        
-        # WebSocket 지원을 위한 설정
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
-    }
-
-    # FastAPI 서버 프록시 (8000 포트)
-    location /api/v1/ocr { 
-        proxy_pass http://damul-fastapi:8000;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
-        proxy_set_header Host $host;
-        proxy_cache_bypass $http_upgrade;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    }
-
-    # Spring Boot 서버 프록시 (8080 포트)
-    location /api/v1 {
-        proxy_pass http://damul-server:8080;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
-        proxy_set_header Host $host;
-        proxy_cache_bypass $http_upgrade;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        root /usr/share/nginx/html;
+        index index.html;
+        try_files $uri $uri/ /index.html;
     }
 }
