Add: Add api for update chat room member size[한재서]

--- a/damul-server/src/main/resources/application.yml
+++ b/damul-server/src/main/resources/application.yml
@@ -39,7 +39,7 @@ spring:
 
   security:
     admin:
-      password: ${admin.password}
+      password: ${ADMIN_PASSWORD}
     oauth2:
       client:
         registration:
