--- a/damul-client/package.json
+++ b/damul-client/package.json
@@ -31,6 +31,7 @@
     "embla-carousel-react": "^8.5.2",
     "lucide-react": "^0.473.0",
     "react": "^18.3.1",
+    "react-day-picker": "^9.5.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "react-intersection-observer": "^9.15.1",
