--- a/damul-client/package.json
+++ b/damul-client/package.json
@@ -29,6 +29,7 @@
     "cmdk": "^1.0.0",
     "embla-carousel-autoplay": "^8.5.2",
     "embla-carousel-react": "^8.5.2",
+    "framer-motion": "^12.4.2",
     "lucide-react": "^0.473.0",
     "react": "^18.3.1",
     "react-day-picker": "^9.5.1",
