Fix : Modify CookieUtil [지유림]

--- a/damul-server/src/main/resources/application.yml
+++ b/damul-server/src/main/resources/application.yml
@@ -1,9 +1,14 @@
 spring:
+  config:
+    import:
+      - optional:classpath:.env[.properties]
+      - optional:file:.env[.properties]
+    profiles:
+      active: prod
+      # on-profile: local
+
   application:
     name: damul-server
-
-  config:
-    import: optional:file:.env[.properties]
 
   data:
     redis:
@@ -110,7 +115,6 @@ spring:
 
 
 
-
 jwt:
   secret: ${JWT_SECRET}
   access-token-expiration: ${JWT_ACCESS_VALIDITY}
@@ -126,33 +130,11 @@ logging:
     org.springframework.security: INFO   # 시큐리티는 필요할 때만 DEBUG로
     com.damul.api: DEBUG          # 우리 애플리케이션 로그
     org.springframework.data.repository.config: WARN  # 또는 ERROR
+    org.springframework.boot.context.config: DEBUG    # 환경변수 로딩 확인
+    org.springframework.security.oauth2.jwt: DEBUG    # JWT 관련 로그
 
 
 redirect:
   frontUrl: ${FRONT_URL}
   main: ${MAIN_URL}
   terms: ${TERMS_URL}
-
----
-spring:
-  config:
-    activate:
-      on-profile: test
-
-  datasource:
-    driver-class-name: org.h2.Driver
-    url: jdbc:h2:mem:testdb;MODE=MySQL
-    username: sa
-    password:
-
-  jpa:
-    hibernate:
-      ddl-auto: none
-    show-sql: true
-    properties:
-      hibernate:
-        format_sql: true
-        highlight_sql: true
-        use_sql_comments: true
-        dialect: org.hibernate.dialect.MySQLDialect
-
