--- a/damul-server/src/test/resources/application-test.yml
+++ b/damul-server/src/test/resources/application-test.yml
@@ -4,25 +4,24 @@ spring:
       on-profile: test
 
   datasource:
-    url: ${SPRING_DATASOURCE_URL}
-    username: ${SPRING_DATASOURCE_USERNAME}
-    password: ${SPRING_DATASOURCE_PASSWORD}
-    driver-class-name: ${SPRING_DATASOURCE_DRIVER_CLASS_NAME}
+    url: jdbc:h2:mem:testdb;MODE=MySQL
+    username: sa
+    password:
+    driver-class-name: org.h2.Driver
 
-  jspring:
-    jpa:
+  jpa:
+    hibernate:
+      ddl-auto: none
+    properties:
       hibernate:
-        ddl-auto: create  # validate에서 create로 변경
-      properties:
-        hibernate:
-          dialect: org.hibernate.dialect.MySQL8Dialect
+        dialect: org.hibernate.dialect.MySQL8Dialect
 
-  jwt:
-    secret: ${JWT_SECRET}
-    access-token-expiration: ${JWT_ACCESS_VALIDITY}
-    refresh-token-expiration: ${JWT_REFRESH_VALIDITY}
-    temporary-token-expiration: ${JWT_TEMPORARY_VALIDITY}
+jwt:
+  secret: test_jwt_secret_key_12345
+  access-token-expiration: 3600000
+  refresh-token-expiration: 604800000
+  temporary-token-expiration: 300000
 
 logging:
   level:
-    org.springframework.security: DEBUG
+    org.springframework.security: error
