Fix: Bugfix with websocket api[한재서] - add userId in dtos - refactor endpoints using changes - refactor services using changes

--- a/damul-server/src/main/resources/application.yml
+++ b/damul-server/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
       - optional:classpath:.env[.properties]
       - optional:file:.env[.properties]
     profiles:
-      active: prod
+      active: local
       # on-profile: local
 
   application:
