Chore : Modify application.yml active prod [지유림]

--- a/damul-server/src/main/resources/application.yml
+++ b/damul-server/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
       - optional:classpath:.env[.properties]
       - optional:file:.env[.properties]
     profiles:
-      active: local
+      active: prod
       # on-profile: local
 
   application:
