Feat: Add batch configuration and scheduling for ingredient price updates [지유림]

--- a/damul-server/src/main/resources/application.yml
+++ b/damul-server/src/main/resources/application.yml
@@ -4,12 +4,22 @@ spring:
       - optional:classpath:.env[.properties]
       - optional:file:.env[.properties]
     profiles:
-      active: prod
+      active: local
       # on-profile: local
 
   application:
     name: damul-server
 
+  cache:
+    type: redis
+    redis:
+      time-to-live: 86400000  # 24시간(밀리초 단위)
+      cache-null-values: false
+    task:
+      scheduling:
+        pool:
+          size: 5  # 스케줄링 스레드 풀 크기
+        thread-name-prefix: schedule-task-  # 스케줄링 스레드 이름 접두사
   data:
     redis:
       host: ${REDIS_HOST:localhost}
