Fix: Bugfix with notifications[한재서]

--- a/damul-server/src/main/resources/application.yml
+++ b/damul-server/src/main/resources/application.yml
@@ -131,6 +131,10 @@ jwt:
   refresh-token-expiration: ${JWT_REFRESH_VALIDITY}
   temporary-token-expiration: ${JWT_TEMPORARY_VALIDITY}
 
+fastapi:
+  server:
+    url: ${FASTAPI_URL}
+
 logging:
   level:
     root: INFO
