Fix : Add Docker variable [신성우]

--- a/damul-client/Dockerfile
+++ b/damul-client/Dockerfile
@@ -5,9 +5,11 @@ WORKDIR /app
 # 환경변수 선언
 ARG VITE_API_BASE_URL
 ARG VITE_WS_BASE_URL
+ARG VITE_API_OCR_URL
 ARG VITE_GOOGLE_OAUTH2_LOGIN_URI
 ARG VITE_NAVER_OAUTH2_LOGIN_URI
 ARG VITE_KAKAO_OAUTH2_LOGIN_URI
+ARG VITE_SERVICE_URL
 
 # 의존성 파일 복사 및 캐시 방지
 COPY package*.json ./
