Fix: Refactor recipe recommandation[한재서]

--- a/damul-server/src/main/resources/application.yml
+++ b/damul-server/src/main/resources/application.yml
@@ -4,10 +4,10 @@ spring:
       - optional:classpath:.env[.properties]
       - optional:file:.env[.properties]
     profiles:
-      active: local
+      active: prod
 
-  profiles:
-    active: local
+#  profiles:
+#    active: local
 
   application:
     name: damul-server
